smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/idl-enums-in-v1.smithy
// enum shapes may only be used with Smithy version 2 or later.
$version: "1.0"

namespace ns.foo

enum Enum {
    FOO
    BAR
}
